# zid

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  Dailfile  Dockerfile  Makefile  README.md  TODO.md  Taskfile.yml  ZID_INTEGRATION_GUIDE.md  docker-compose.yml  oidc_clients.example.toml  oidc_clients.example.yaml  oidc_clients.yaml  zid.conf  zid.dail
docs/: FREEBSD_SETUP.md  OIDC_TESTING.md  TELEGRAM_LOGIN.md
migrations/: 001_create_users_table.down.sql  001_create_users_table.up.sql  002_add_telegram_support.down.sql  002_add_telegram_support.sql  003_create_sessions_and_tickets.down.sql  003_create_sessions_and_tickets.sql  004_create_credentials.down.sql  004_create_credentials.sql  005_init_placeholder.down.sql  005_init_placeholder.up.sql  006_create_oauth_auth_codes.down.sql  006_create_oauth_auth_codes.up.sql  20260125120000_init.down.sql  20260125120000_init.up.sql
scripts/: setup-freebsd.sh  test-oidc.sh  test.sh  zid.rc.d
src/: cli.rs  main.rs  migrations.rs
src/adapters/: mod.rs
src/adapters/http/: dto.rs  handlers.rs  mod.rs  routes.rs  sso_cookie.rs
src/adapters/oidc/: file_client_store.rs  mod.rs
src/adapters/persistence/: credential_redis.rs  mod.rs  postgres_auth_code.rs  postgres_credentials.rs  postgres_session.rs  postgres_ticket.rs  postgres_user.rs  redis_auth_code.rs  redis_credentials.rs  redis_session.rs  redis_ticket.rs  redis_user.rs  session_redis.rs  sqlite_credentials.rs  sqlite_session.rs  sqlite_ticket.rs  sqlite_user.rs  ticket_redis.rs  user_postgres.rs  user_redis.rs
src/adapters/telegram/: mod.rs
src/application/: mod.rs  oidc_app.rs  oidc_jwt.rs  zid_app.rs
src/ports/: auth_code_repository.rs  client_store.rs  credentials_repository.rs  entities.rs  error.rs  mod.rs  oidc_service.rs  session_repository.rs  ticket_repository.rs  user_repository.rs  zid_service.rs
