[package]
name = "zid"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5"
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
rand_core = { version = "0.6", features = ["getrandom"] }
redis = "0.27"
rust-embed = { version = "8", features = ["compression"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
urlencoding = "2"
uuid = { version = "1.19.0", features = ["v4"] }
# Для Telegram Login верификации
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
# OIDC/OAuth 2.0
jsonwebtoken = "9"
toml = "0.8"
serde_yaml = "0.9"
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
