[package]
name = "zid"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
argon2 = "0.5"
axum = { version = "0.8.7", features = ["macros"] }
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
rand_core = { version = "0.6", features = ["getrandom"] }
redis = "0.27"
# Без compression: zstd-sys ломает сборку под aarch64-unknown-freebsd (cc-rs, Operation not permitted)
rust-embed = { version = "8" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# Минимальный набор фич: main, spawn_blocking, TcpListener; без full — быстрее сборка и меньше зависимостей
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
# Только парсинг (Url::parse); без serde — меньше зависимостей
url = { version = "2.5.7", default-features = false }
urlencoding = "2"
# Только v4 (new_v4()); без default — меньше зависимостей
uuid = { version = "1.19.0", default-features = false, features = ["v4"] }
# Для Telegram Login верификации
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
# SQLite
rusqlite = { version = "0.34", features = ["bundled"] }
r2d2_sqlite = "0.27"
# OIDC/OAuth 2.0
jsonwebtoken = "9"
serde_yaml = "0.9"
base64 = "0.22"
# Интерактивный ввод в CLI
inquire = "0.7"
# Только чтение PEM публичного ключа; без default — меньше зависимостей
rsa = { version = "0.9", default-features = false, features = ["pem"] }

[profile.release]
# Меньший бинарник
lto = true
codegen-units = 1
strip = true
